--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,18 +78,16 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/currentDuration"
+            android:id="@+id/timePos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView" />
+            android:layout_weight="1"/>
 
         <TextView
-            android:id="@+id/maxDuration"
+            android:id="@+id/timeDur"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="TextView"
             android:gravity="right"/>
 
     </LinearLayout>
