--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -42,10 +41,14 @@
 
         <ImageButton
             android:id="@+id/showToast"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="75dip"
+            android:layout_height="75dip"
             android:layout_alignParentRight="true"
-            app:srcCompat="@android:drawable/ic_dialog_info"/>
+            android:background="@null"
+            android:clickable="true"
+            android:paddingRight="10dip"
+            android:paddingTop="10dip"
+            app:srcCompat="@drawable/info" />
 
         <Button
             android:id="@+id/change"
@@ -83,6 +86,7 @@
             android:layout_height="wrap_content"
             android:paddingLeft="15dip"
             android:textSize="20dip"
+            android:textColor="@android:color/white"
             android:layout_weight="1"/>
 
         <TextView
@@ -92,6 +96,7 @@
             android:layout_weight="1"
             android:paddingRight="15dip"
             android:textSize="20dip"
+            android:textColor="@android:color/white"
             android:gravity="right"/>
 
     </LinearLayout>
@@ -115,7 +120,8 @@
             android:layout_margin="15dip"
             android:layout_weight="1"
             android:onClick="changeColor2"
-            app:srcCompat="@android:drawable/ic_media_previous"/>
+            app:srcCompat="@drawable/media_previous"
+            android:background="@null"/>
 
         <ImageButton
             android:id="@+id/play"
@@ -124,7 +130,8 @@
             android:layout_margin="15dip"
             android:layout_weight="1"
             android:onClick="onPlayButtonPress"
-            app:srcCompat="@android:drawable/ic_media_play" />/>
+            app:srcCompat="@drawable/media_play"
+            android:background="@null"/>
 
         <ImageButton
             android:id="@+id/next"
@@ -133,7 +140,8 @@
             android:layout_margin="15dip"
             android:layout_weight="1"
             android:onClick="changeColor"
-            app:srcCompat="@android:drawable/ic_media_next"/>
+            app:srcCompat="@drawable/media_next"
+            android:background="@null"/>
     </LinearLayout>
 
 </LinearLayout>
