--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="@color/colorPrimary"
             />
 
         <CheckBox
@@ -50,12 +51,21 @@
             android:paddingTop="10dip"
             app:srcCompat="@drawable/info" />
 
+        <TextView
+            android:id="@+id/songName"
+            android:layout_width="match_parent"
+            android:layout_height="50dip"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:textSize="30dip"/>
+
         <Button
-            android:id="@+id/change"
+            android:id="@+id/charts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Change"
-            android:onClick="changeA"
+            android:text="CHARTS"
+            android:onClick="charts"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true" />
 
@@ -119,7 +129,7 @@
             android:layout_height="80dip"
             android:layout_margin="15dip"
             android:layout_weight="1"
-            android:onClick="changeColor2"
+            android:onClick="prevSong"
             app:srcCompat="@drawable/media_previous"
             android:background="@null"/>
 
@@ -139,7 +149,7 @@
             android:layout_height="80dip"
             android:layout_margin="15dip"
             android:layout_weight="1"
-            android:onClick="changeColor"
+            android:onClick="nextSong"
             app:srcCompat="@drawable/media_next"
             android:background="@null"/>
     </LinearLayout>
