--- a/app/src/main/res/layout/activity_charts.xml
+++ b/app/src/main/res/layout/activity_charts.xml
@@ -3,6 +3,5 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="krullmensch.de.mediaplayer.Activity2">
-
+    tools:context="krullmensch.de.mediaplayer.chartsActivity">
 </android.support.constraint.ConstraintLayout>
